updated markdown component

--- a/simpledocs/src/app/components/markdown/markdown.component.html
+++ b/simpledocs/src/app/components/markdown/markdown.component.html
@@ -1,8 +1,7 @@
-<ng-container *ngIf="renderedMarkdown$ | async as markdown; else loadingTemplate">
-  <article class="prose my-8 text-sm" [innerHTML]="markdown"></article>
+<ng-container>
+  @if (renderedMarkdown$ | async; as markdown) {
+    <article class="prose my-8 text-sm" [innerHTML]="markdown"> </article>
+  } @else {
+    <article> The document can't be loaded </article>
+  }
 </ng-container>
-
-<ng-template #loadingTemplate>
-  <article>The document can't be loaded</article>
-</ng-template>
-  
