--- a/simpledocs/src/app/components/theme-preference-picker/theme-preference-picker.component.html
+++ b/simpledocs/src/app/components/theme-preference-picker/theme-preference-picker.component.html
@@ -9,7 +9,7 @@
 </button>
 
 <ng-template #menu>
-  <div cdkMenu class="flex flex-col gap-6 rounded-md border border-neutral-200 bg-neutral-100 shadow-md">
+  <div cdkMenu class="flex flex-col gap-6 w-fit rounded-md border border-neutral-200 bg-neutral-100 shadow-md">
 
     <button class="flex flex-col items-center p-2" cdkMenuItemCheckbox (click)="switchColorScheme('dark')">
       <app-moon-svg class="h-5 w-5"></app-moon-svg>
