--- a/simpledocs/src/styles.scss
+++ b/simpledocs/src/styles.scss
@@ -3,6 +3,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import '@angular/cdk/overlay-prebuilt.css';
+
 body {
   @apply bg-white text-black;
 }
